--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="Rumeet Goradia" content="Tetris" />
   <link rel="apple-touch-icon" href="logo192.png" />
-  <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque:400,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Heebo:100,400&display=swap" rel="stylesheet">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
