--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="Rumeet Goradia" content="Tetris" />
-  <link rel="apple-touch-icon" href="logo192.png" />
+  <link rel="apple-touch-icon" href="android-chrome-192x192.png" />
   <link href="https://fonts.googleapis.com/css?family=Heebo:100,400&display=swap" rel="stylesheet">
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Tetris: Rumeet Goradia</title>
 </head>
 
 <body>
